--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -246,6 +246,8 @@ header.masthead h2 {
   z-index: 2;
   -webkit-box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
+  background-color: rgba(44, 44, 44, 0.75);
+  color: #fff;
 }
 
 .portfolio-modal .portfolio-modal-dialog .close-button {
