--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -34,10 +34,10 @@ hr.star-dark {
 hr.star-light:after,
 hr.star-dark:after {
   position: relative;
-  top: -.8em;
+  top: 2.8em;
   display: inline-block;
   padding: 0 0.25em;
-  content: '\f005';
+  content: '\f4fb';
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   font-size: 2em;
@@ -49,7 +49,7 @@ hr.star-light {
 
 hr.star-light:after {
   color: #fff;
-  background-color: #fff;
+  background-color: rgba(0,0,0,0);
 }
 
 hr.star-dark {
@@ -58,7 +58,7 @@ hr.star-dark {
 
 hr.star-dark:after {
   color: #2C3E50;
-  background-color: white;
+  background-color: rgba(0,0,0,0);
 }
 
 section {
