--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -34,10 +34,10 @@ hr.star-dark {
 hr.star-light:after,
 hr.star-dark:after {
   position: relative;
-  top: 2.8em;
+  top: -1.25em;
   display: inline-block;
   padding: 0 0.25em;
-  content: '\f4fb';
+  content: '\f6fc';
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   font-size: 2em;
@@ -362,6 +362,10 @@ a:focus, a:hover, a:active {
 
 .bg-secondary {
   background-color: #2C3E50 !important;
+}
+
+.bg-tertiary {
+  background-color: #1a252f !important;
 }
 
 .text-primary {
